GeneWeb Version 1.12
--------------------

GeneWeb Version 1.11
--------------------

* General
  - [Jan 27, 99] Added Hebrew (Jonathan Marder, Ruth Marder)

* GeneWeb daemon/CGI (gwd)
  - [Jan 30, 99] Added link to welcome page after updates.
  - [Jan 24, 99] Added default photo names: not necessary to specify a
    photo for someone, a default name is searched.
  - [Jan 20, 99; Jan 30, 99] Added display of latest deaths.
  - [Jan 19, 99] Added direct links to siblings.
  - [Jan 18, 99] Family comment now displayed like dates (=> possible
    visibility by password restriction).
  - [Jan 18, 99] In notes and sources, the string "%s" is replaced by the
    name of the base in the same context. For example, in a source field,
    if "John Smith" is in the same database, it is possible to record it
    as:
      <a href="%sp=john;n=smith">John Smith</a>
  - [Jan 11, 99] Display declined forms (for some languages). E.g.:
      * in German: "x ist ein Sohn von einem Cousin von y"
	  ("einem" instead of the inkorrect "ein").
      * in Esperanto: "aldoni personon"
          ("personon" instead of the incorrect "persono")

* GeneWeb compiler (gwc)
  - [Jan 26, 99] Fixed bug: failure when backslashes in source.
  - [Jan 18, 99] Fixed two bugs in dates parsing: 1. "x..y" (between x and
    y) was interpreted as "x|y" (x or y) 2. did not accept "d/m/y..y".

* Gedcom to GeneWeb (ged2gwb)
  - [Feb 3, 99] No more message "Not implemented SUBM".
  - [Feb 1, 99] Accept now "BET x AND" as "AFT x" and "BET AND x" as "BEF x".
  - [Feb 1, 99] Fixed bug: date intervals did not work (generating "maybe").

* GeneWeb to Gedcom (gwb2ged)
  - [Jan 19, 99] Fixed bug: the tag "<br>" was converted into a new line
    only in lowercase form; "<BR>" did not work.

* Gedcom to GeneWeb and GeneWeb to Gedcom (ged2gwb, gwb2ged)
  - [Jan 18, 99] When there are several names (several records "1 NAME") for
    someone in Gedcom, the other become "aliases" (and vice versa for
    gwb2ged).
